# Diffusion-Sketch

./: .gitignore  Makefile  pyproject.toml  requirements.txt  setup.sh
configs/: default.yaml
src/diffusion_sketch/: __init__.py  __main__.py  config.py
src/diffusion_sketch/data/: __init__.py  dataset.py  transforms.py
src/diffusion_sketch/losses/: __init__.py  combined.py  gradient.py  histogram.py  laplacian.py  perceptual.py
src/diffusion_sketch/models/: __init__.py  diffusion.py  unet.py
src/diffusion_sketch/training/: __init__.py  trainer.py  utils.py
tests/: conftest.py  test_config.py  test_dataset.py  test_transforms.py
